--- a/drawbacks.html
+++ b/drawbacks.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://cdn.glitch.com/75bbfbb2-db21-42db-a49e-7e3a6d57f4e3%2Ff.png?1519582724839" />
-    <link rel="stylesheet" href="/drawbacks.css">
+    <link rel="stylesheet" href="drawbacks.css">
     <script src="/script.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!-- Compiled and minified CSS -->
