--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-         <link rel="stylesheet" href="/styles.css">     
+         <link rel="stylesheet" href="styles.css">     
   <style>
 body, html {
     height: 100%;
