🔥🚈 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-         <link rel="stylesheet" href="/styles.css">     
+         <link rel="stylesheet" href="styles.css">     
   <style>
 body, html {
     height: 100%;
@@ -54,9 +54,13 @@ body, html {
     </div>
 <ul>
   <li style= "padding-top: 560px; font-size: 25px;color: white;">Scroll Down For More Info
-<!--  <img src="https://cdn.glitch.com/75bbfbb2-db21-42db-a49e-7e3a6d57f4e3%2Fdownarrow.png?1522443594004">-->
+  
   </li>
   </ul>
+  <p  height="50px">
+    
+  </p>
+  <img src="https://cdn.glitch.com/75bbfbb2-db21-42db-a49e-7e3a6d57f4e3%2Farrow.png?1523053870618" height="5%" width="5%">
   </div>
     
    <!-- image replaced by video
